--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "cesium": "^1.37.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.7",
-    "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.6.2",
     "webpack": "^3.5.6"
   },
   "scripts": {
