--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "homepage": "https://cesiumjs.org",
   "license": "ISC",
   "devDependencies": {
-    "cesium": "^1.37.0",
+    "cesium": "http://cesium-dev.s3-website-us-east-1.amazonaws.com/cesium/master/cesium-1.38.0.tgz",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.7",
     "html-webpack-plugin": "^2.30.1",
+    "strip-pragma-loader": "^1.0.0",
     "style-loader": "^0.18.2",
+    "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
     "url-loader": "^0.6.2",
     "webpack": "^3.5.6",
     "webpack-dev-server": "^2.9.1"
