--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
   "scripts": {
     "build": "node_modules/.bin/webpack --config webpack.config.js",
     "start": "node_modules/.bin/webpack-dev-server --config webpack.config.js",
-    "release": "node_modules/.bin/webpack --config release.webpack.config.js"
+    "release": "node_modules/.bin/webpack --config webpack.release.config.js"
   }
 }
