--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "homepage": "https://cesiumjs.org",
   "license": "Apache-2.0",
   "devDependencies": {
-    "cesium": "^1.39.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.7",
     "html-webpack-plugin": "^2.30.1",
@@ -25,6 +24,9 @@
     "url-loader": "^0.6.2",
     "webpack": "^3.5.6",
     "webpack-dev-server": "^2.9.1"
+  },
+  "dependencies": {
+    "cesium": "^1.46.1"
   },
   "scripts": {
     "build": "node_modules/.bin/webpack --config webpack.config.js",
