--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "example"
   ],
   "author": {
-    "name": "Analytical Graphics, Inc.",
-    "url": "https://www.agi.com"
+    "name": "Cesium GS, Inc.",
+    "url": "https://cesium.com"
   },
   "homepage": "https://cesiumjs.org",
   "license": "Apache-2.0",
+  "dependencies": {
+    "cesium": "http://cesium-dev.s3-website-us-east-1.amazonaws.com/cesium/no-import-meta/cesium-1.62.0-no-import-meta32711.tgz"
+  },
   "devDependencies": {
-    "cesium": "http://cesium-dev.s3-website-us-east-1.amazonaws.com/cesium/no-import-meta/cesium-1.62.0-no-import-meta32711.tgz",
     "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
