--- a/package.json
+++ b/package.json
@@ -18,16 +18,14 @@
     "cesium": "^1.63.1"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^6.0.3",
-    "css-loader": "^3.2.0",
-    "html-webpack-plugin": "^3.2.0",
-    "strip-pragma-loader": "^1.0.0",
-    "style-loader": "^1.0.0",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "url-loader": "^2.2.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.9.0"
+    "copy-webpack-plugin": "^7",
+    "css-loader": "^5.0.2",
+    "html-webpack-plugin": "^5.0.0",
+    "style-loader": "^2.0.0",
+    "url-loader": "^4",
+    "webpack": "5",
+    "webpack-cli": "^4",
+    "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
     "build": "node_modules/.bin/webpack --config webpack.config.js",
