--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "webpack": "^5.50.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "cesiumjs": "^1.10.0"
   }
 }
