--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "cesiumjs": "^1.10.0"
+    "cesiumjs": "^1.10.0",
+    "es6": "^0.0.7"
   }
 }
