--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "strip-pragma-loader": "^1.0.0",
     "style-loader": "^3.2.1",
     "url-loader": "^4.1.1",
-    "webpack": "^5.50.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "cesiumjs": "^1.10.0",
     "es6": "^0.0.7",
-    "release": "^6.3.0"
+    "release": "^6.3.0",
+    "webpack": "^5.51.1"
   }
 }
