trying to resolve Travis CI issues part 10

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "sass-loader": "^7.1.0",
     "strip-pragma-loader": "^1.0.0",
     "style-loader": "^3.2.1",
     "url-loader": "^4.1.1",
