--- a/package.json
+++ b/package.json
@@ -28,15 +28,10 @@
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
-    "sass-loader": "^7.1.0",
-    "strip-pragma-loader": "^1.0.0",
     "style-loader": "^3.2.1",
     "url-loader": "^4.1.1",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^3.11.2",
-    "es6": "^0.0.7",
-    "querystring-es3": "^0.2.1",
-    "release": "^6.3.0",
-    "webpack": "^5.51.1"
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.3.1"
   }
 }
