--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
     "webpack": "^5.51.1",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.3.1"
+  },
+  "dependencies": {
+    "draco3d": "^1.5.0",
+    "wasm-loader": "^1.3.0"
   }
 }
