--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   },
   "main": "index.js",
   "scripts": {
-    "build": "node_modules/.bin/webpack --config webpack.config.js",
-    "start": "node_modules/.bin/webpack serve --config webpack.config.js --open"
+    "build": "webpack --config webpack.config.js",
+    "start": "webpack serve --config webpack.config.js --open"
   },
   "devDependencies": {
     "cesium": "^1.84.0",
