--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "start": "webpack serve --config webpack.config.js --open"
   },
   "devDependencies": {
-    "cesium": "^1.97.0",
+    "cesium": "1.105.2",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
