--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,18 @@
 name: main
 on: push
 jobs:
-  node_18:
+  build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [ 16, 18 ]
+    name: Node ${{ matrix.node }}
     steps:
       - uses: actions/checkout@v3
-      - name: install node 18
+      - name: install node ${{ matrix.node }}
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
-      - name: install
-        run: npm install
-      - name: build
-        run: npm run build
-  node_16:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: install node 16
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16'
+           node-version: ${{ matrix.node }}
       - name: install
         run: npm install
       - name: build
