--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,16 +5,19 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [ 16, 18 ]
+        node: [18, 20]
     name: Node ${{ matrix.node }}
     steps:
       - uses: actions/checkout@v3
       - name: install node ${{ matrix.node }}
         uses: actions/setup-node@v3
         with:
-           node-version: ${{ matrix.node }}
+          node-version: ${{ matrix.node }}
       - name: install
         run: npm install
+      - name: lint *.js
+        run: npm run eslint
+      - name: format code
+        run: npm run prettier-check
       - name: build
         run: npm run build
-
