fix example and update cesium version

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,9 @@
   "root": true,
   "extends": ["cesium/browser"],
   "plugins": ["html", "es"],
+  "parserOptions": {
+    "ecmaVersion": 2023
+  },
   "rules": {
     "no-unused-vars": ["error", { "vars": "all", "args": "none" }]
   }
