lint webpack config too

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,5 +4,11 @@
   "plugins": ["html", "es"],
   "rules": {
     "no-unused-vars": ["error", { "vars": "all", "args": "none" }]
-  }
+  },
+  "overrides": [
+    {
+      "files": ["webpack.config.js"],
+      "extends": ["cesium/node"]
+    }
+  ]
 }
