--- a/webpack-4/package.json
+++ b/webpack-4/package.json
@@ -22,31 +22,24 @@
   "scripts": {
     "build": "webpack --config webpack.config.js",
     "start": "webpack serve --config webpack.config.js",
-    "start:built": "npx http-server -a localhost -p 8080 dist/",
-    "eslint": "eslint \"./**/*.js\" \"./**/*.html\" --cache --quiet",
-    "prettier": "prettier --write --no-config \"**/*\"",
-    "prettier-check": "prettier --check --no-config \"**/*\""
+    "start:built": "npx http-server -a localhost -p 8080 dist/"
   },
   "devDependencies": {
-    "cesium": "^1.113.0",
-    "copy-webpack-plugin": "^9.1.0",
-    "css-loader": "^6.8.1",
-    "eslint": "^8.56.0",
-    "eslint-config-cesium": "^10.0.2",
-    "eslint-plugin-es": "^4.1.0",
-    "eslint-plugin-html": "^7.1.0",
-    "html-webpack-plugin": "^5.6.0",
-    "husky": "^8.0.3",
-    "prettier": "^3.1.1",
-    "style-loader": "^3.3.3",
-    "webpack": "^5.89.0",
+    "@babel/core": "^7.23.7",
+    "@babel/plugin-transform-optional-chaining": "^7.23.4",
+    "@babel/preset-env": "^7.23.7",
+    "@open-wc/webpack-import-meta-loader": "^0.4.7",
+    "babel-loader": "^8.3.0",
+    "copy-webpack-plugin": "^6.4.1",
+    "css-loader": "^5.2.7",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.2",
+    "style-loader": "^2.0.0",
+    "webpack": "^4.47.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.15.1"
   },
-  "lint-staged": {
-    "*.{js,cjs,html}": [
-      "eslint --cache --quiet",
-      "prettier --write --no-config"
-    ]
+  "dependencies": {
+    "cesium": "^1.113.0"
   }
 }
