--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,11 @@ jobs:
     strategy:
       matrix:
         node: [18, 20]
+        webpack-dir: [webpack-4, webpack-5]
     name: Node ${{ matrix.node }}
+    defaults:
+      run:
+        working-directory: ${{ matrix.webpack-dir }}
     steps:
       - uses: actions/checkout@v3
       - name: install node ${{ matrix.node }}
