--- a/webpack-5/package.json
+++ b/webpack-5/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cesiumjs-webpack-example",
+  "name": "cesiumjs-webpack-5-example",
   "version": "1.0.0",
   "description": "The minimal recommended setup for an app using Cesium with Webpack.",
   "homepage": "https://cesium.com/platform/cesiumjs/",
@@ -22,31 +22,18 @@
   "scripts": {
     "build": "webpack --config webpack.config.js",
     "start": "webpack serve --config webpack.config.js",
-    "start:built": "npx http-server -a localhost -p 8080 dist/",
-    "eslint": "eslint \"./**/*.js\" \"./**/*.html\" --cache --quiet",
-    "prettier": "prettier --write --no-config \"**/*\"",
-    "prettier-check": "prettier --check --no-config \"**/*\""
+    "start:built": "npx http-server -a localhost -p 8080 dist/"
+  },
+  "dependencies": {
+    "cesium": "^1.113.0"
   },
   "devDependencies": {
-    "cesium": "^1.113.0",
     "copy-webpack-plugin": "^9.1.0",
     "css-loader": "^6.8.1",
-    "eslint": "^8.56.0",
-    "eslint-config-cesium": "^10.0.2",
-    "eslint-plugin-es": "^4.1.0",
-    "eslint-plugin-html": "^7.1.0",
     "html-webpack-plugin": "^5.6.0",
-    "husky": "^8.0.3",
-    "prettier": "^3.1.1",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.15.1"
-  },
-  "lint-staged": {
-    "*.{js,cjs,html}": [
-      "eslint --cache --quiet",
-      "prettier --write --no-config"
-    ]
   }
 }
